<resources>
    <string name="app_name">Seguridad Arce</string>
    <string name="action_settings">Settings</string>
    <string name="option_bar">Acciones</string>
    <string name="crear_bar">Crear</string>
    <string name="consul_bar">Consultar</string>
    <string name="modif_bar">Modificar</string>
    <string name="elim_bar">Eliminar</string>
    <string name="req1">Entrada</string>
    <string name="req2">Nombre</string>
    <string name="req3">Apellido</string>
    <string name="req4">Rut</string>
    <string name="req5">Casa</string>
    <string name="req6">Patente</string>
    <string name="req7">Autoriza</string>
</resources>
